2011-05-24  Mike Reed  <reed@google.com>

Reviewed by Kenneth Russell.

        skia: fix stroking of zero-height rectangles
        https://bugs.webkit.org/show_bug.cgi?id=61284

        Tests: canvas/philip/tests/2d.line.miter.lineedge.html
               canvas/philip/tests/2d.strokeRect.zero.4.html

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::strokeRect):

Canonical link: https://commits.webkit.org/76754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87174 268f45cc-cd09-0410-ab3c-d52691b4dbfc